@@ -17,7 +17,7 @@ provides:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto:
     file: lib/Net/FullAuto.pm
-    version: 0.57
+    version: 0.58
   Net::FullAuto::FA_Core:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto::FA_DB:
@@ -44,8 +44,8 @@ requires:
   Module::Load::Conditional: 0
   Term::Menus: 1.49
   Tie::Cache: 0
-  MLDBM::Sync: 0
   MLDBM: 0
+  MLDBM::Sync: 0
   Sort::Versions: 0
   Crypt::CBC: 0
   Crypt::DES: 0
@@ -64,4 +64,4 @@ requires:
   BerkeleyDB: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 0.57
+version: 0.58
