@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 5cb5b6ce6d9e261a8bf2dd28478f620f49bec977 ChangeLog
+SHA1 123d7d53377df3aa79c1b1c067c30c8e054d83d4 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
-SHA1 f369b622f3a097845f644025f465366b37343e80 META.yml
-SHA1 de03fd6a85509cdeddcc93c215a976cec61161e2 Makefile.PL
+SHA1 6079cb857a6b721f252be25d004d62c72a34eb3b META.yml
+SHA1 799589bb87b41bcfd00ed234e3871d4809159745 Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 6ddac479f996e3527d2cdc7d2d57a94dcf743e04 lib/Net/FullAuto.pm
+SHA1 232bbc92709ab39a42d345b8f50540ca983f9add lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -47,7 +47,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAky51uEACgkQdsVAdUjO9IkeQQCeI5pdJTb3FIAuCVv/GO09y/2E
-aWgAn0EVcdps0/nWALgsGgDgn/gAcFa+
-=fKke
+iEYEARECAAYFAky8MTIACgkQdsVAdUjO9Ik7kACeNuGqb6ClTNfYDEfDL8mWr2SV
+YLQAn23f5d9P3oB5N5GGfpTR7JQ67oRJ
+=Ji9A
 -----END PGP SIGNATURE-----
